--- a/{{project_name}}/src/{{package_name}}/output.py.jinja
+++ b/{{project_name}}/src/{{package_name}}/output.py.jinja
@@ -29,30 +29,32 @@ class Output{{short_name | title}}(OutputBase):
         Sources for inclusion to makefile_usr.inc
         Dict[directory]  -> list of source files
         """
-        return {}
-
+        {% if kth_framework %}
         # For example this is the list of extra files required for the KTH
         # Framework:
 
-        # return {
-        #     "toolbox": [
-        #         ("frame.f", "FRAMELP"),
-        #         ("mntrlog_block.f", "MNTRLOGD"),
-        #         ("mntrlog.f", "MNTRLOGD"),
-        #         ("mntrtmr_block.f", "MNTRLOGD", "MNTRTMRD"),
-        #         ("mntrtmr.f", "MNTRLOGD", "MNTRTMRD", "FRAMELP"),
-        #         ("rprm_block.f", "RPRMD"),
-        #         ("rprm.f", "RPRMD", "FRAMELP"),
-        #         ("io_tools_block.f", "IOTOOLD"),
-        #         ("io_tools.f", "IOTOOLD"),
-        #         ("chkpoint.f", "CHKPOINTD"),
-        #         ("chkpt_mstp.f", "CHKPTMSTPD", "CHKPOINTD"),
-        #         ("map2D.f", "MAP2D", "FRAMELP"),
-        #         ("stat.f", "STATD", "MAP2D", "FRAMELP"),
-        #         ("stat_IO.f", "STATD", "MAP2D", "FRAMELP"),
-        #         ("math_tools.f",),
-        #     ],
-        # }
+        return {
+            "toolbox": [
+                ("frame.f", "FRAMELP"),
+                ("mntrlog_block.f", "MNTRLOGD"),
+                ("mntrlog.f", "MNTRLOGD"),
+                ("mntrtmr_block.f", "MNTRLOGD", "MNTRTMRD"),
+                ("mntrtmr.f", "MNTRLOGD", "MNTRTMRD", "FRAMELP"),
+                ("rprm_block.f", "RPRMD"),
+                ("rprm.f", "RPRMD", "FRAMELP"),
+                ("io_tools_block.f", "IOTOOLD"),
+                ("io_tools.f", "IOTOOLD"),
+                ("chkpoint.f", "CHKPOINTD"),
+                ("chkpt_mstp.f", "CHKPTMSTPD", "CHKPOINTD"),
+                ("map2D.f", "MAP2D", "FRAMELP"),
+                ("stat.f", "STATD", "MAP2D", "FRAMELP"),
+                ("stat_IO.f", "STATD", "MAP2D", "FRAMELP"),
+                ("math_tools.f",),
+            ],
+        }
+        {% else %}
+        return {}
+        {% endif %}
 
 
 Output = Output{{short_name | title}}
