--- a/{{project_name}}/src/{{package_name}}/solver.py.jinja
+++ b/{{project_name}}/src/{{package_name}}/solver.py.jinja
@@ -1,8 +1,9 @@
 from snek5000.info import InfoSolverMake
-from snek5000.solvers.base import SimulNek
-
-# To use KTH Framework import SimulKTH instead
-# from snek5000.solvers.kth import SimulKTH
+{% if kth_framework %}
+from snek5000.solvers.kth import SimulKTH as SimulBase
+{% else %}
+from snek5000.solvers.base import SimulNek as SimulBase
+{% endif %}
 
 
 class InfoSolver{{short_name | title}}(InfoSolverMake):
@@ -27,7 +28,7 @@ class InfoSolver{{short_name | title}}(InfoSolverMake):
         self.par_sections_disabled.remove("temperature")
 
 
-class Simul{{short_name | title}}(SimulNek):
+class Simul{{short_name | title}}(SimulBase):
     """A solver which compiles and runs using a Snakefile."""
 
     InfoSolver = InfoSolver{{short_name | title}}
@@ -40,7 +41,7 @@ class Simul{{short_name | title}}(SimulNek):
         """
         params = super().create_default_params()
         # Re-define default values for parameters here, if necessary
-        # following ``canonical.par``, ``canonical.box`` and ``SIZE`` files
+        # following ``{{short_name}}.par``, ``{{short_name}}.box`` and ``SIZE`` files
 
         # Extend with new default parameters here, for example:
         # params.nek.velocity._set_attrib("advection", True)
