--- a/{{project_name}}/LICENSE.jinja
+++ b/{{project_name}}/LICENSE.jinja
@@ -1,6 +1,6 @@
 BSD 3-Clause License
 
-Copyright (c) {{year}}, {{author}}
+Copyright (c) {% now 'utc', '%Y' %}, {{author}}
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
