Fix project name in pyproject.toml

--- a/{{project_name}}/pyproject.toml.jinja
+++ b/{{project_name}}/pyproject.toml.jinja
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "{{package_name}}"
+name = "{{project_name}}"
 version = "0.0.1"
 description = "{{description}}"
 readme = "README.md"
